--- a/index.html
+++ b/index.html
@@ -1,10 +1,79 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/app.js"></script>
     <meta charset="utf-8">
-    <title></title>
+    <title>The Impossible Math Game</title>
   </head>
   <body>
-    <p>Hello World</p>
+    <div class="trivia-panel container">
+
+      <div class="row">
+        <div class="col-md-12 row-centered">
+          <h1>The Impossible Math Game</h1>
+          <h4>You Will Lose</h4>
+        </div>
+      </div>
+
+      <br>
+      <br>
+      <br>
+
+      <div id="timeRemainingDiv" class="row" style="display: none">
+        <div class="col-md-12 row-centered">
+          <h4>Time Remaining: <span id="timeRemainingSpan"></span></h4>
+        </div>
+      </div>
+
+
+      <div id="start">
+        <div class="row row-centered">
+          <div id="startButton" class="col-md-2 col-centered">
+            <button id="startButtonInner" type="button" class="btn btn-sharp btn-danger">Begin Your Suffering!</button>
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <br>
+
+      <div id="question" style="display: none">
+        <div class="row row-centered">
+          <div class="col-md-12" style="text-align: center">
+            <h4 id="questionHeader">Question</h4>
+            <button id="button0" type="button" class="answer-button btn btn-sharp btn-danger">Start!</button>
+            <button id="button1" type="button" class="answer-button btn btn-sharp btn-danger">Start!</button>
+            <button id="button2" type="button" class="answer-button btn btn-sharp btn-danger">Start!</button>
+            <button id="button3" type="button" class="answer-button btn btn-sharp btn-danger">Start!</button>
+          </div>
+        </div>
+      </div>
+
+      <div id="answer" style="display: none">
+        <div class="row row-centered">
+          <div class="col-md-12 col-centered" style="text-align: center">
+            <h4 id="responseHeader">Response</h4>
+            <h4 id="correctResponseHeader">CorrectResponse</h4>
+          </div>
+        </div>
+      </div>
+
+      <div id="end" style="display: none">
+        <div class="row row-centered">
+          <div class="col-md-12 col-centered" style="text-align: center">
+            <h4>Your Results</h4>
+            <h4 id="numCorrectHeader">NumCorrect</h4>
+            <h4 id="numWrongHeader">NumWrong</h4>
+            <h4 id="numNoResponseHeader">NumUnanswerd</h4>
+            <button id="resetButtonInner" type="button" class="btn btn-sharp btn-danger">Make Another Futile Attempt</button>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
